--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,10 @@
   "files": [],
   "references": [
     {
-      "path": "./apps/auth-service-e2e"
+      "path": "./apps/auth-service"
     },
     {
-      "path": "./apps/auth-service"
+      "path": "./apps/api-gateway"
     }
   ]
 }
